# Pebble

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  package.json  vite.config.ts
.github/workflows/: auto-patch.yml  ci.yml  release.yml
crates/pebble-core/: Cargo.toml
crates/pebble-core/src/: lib.rs  snippet.rs  types.rs
crates/pebble-crypto/: Cargo.toml
crates/pebble-crypto/src/: keystore.rs  lib.rs  passphrase.rs
crates/pebble-mail/: Cargo.toml
crates/pebble-mail/src/: imap.rs  lib.rs  parser.rs  pop3.rs  pop3_sync.rs  smtp.rs  sync.rs
crates/pebble-mail/src/provider/: gmail.rs  mod.rs  pop3_provider.rs
crates/pebble-oauth/: Cargo.toml
crates/pebble-oauth/src/: redirect.rs
crates/pebble-privacy/: Cargo.toml
crates/pebble-privacy/src/: sanitizer.rs
crates/pebble-rules/: Cargo.toml
crates/pebble-search/: Cargo.toml
crates/pebble-store/: Cargo.toml
crates/pebble-store/src/: accounts.rs  cloud_sync.rs  messages.rs  migrations.rs  pending_ops.rs
crates/pebble-translate/: Cargo.toml
crates/pebble-translate/src/: deepl.rs  deeplx.rs  llm.rs
docs/superpowers/specs/: 2026-05-17-pebble-web-design.md
patches/: 0001-fix-keep-background-sync-and-scope-IMAP-UIDs-by-fold.patch  0002-chore-keep-actions-windows-only.patch  0003-fix-clear-stale-sync-errors.patch  0003-fix-oauth-runtime-env-and-diagnostics.patch  0003-style-satisfy-rustfmt-for-migration-test.patch  0004-ci-release-patched-upstream-syncs.patch
scripts/: build-tauri.mjs  update-and-apply-patches.ps1
site/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  appearance.rs  attachments.rs  autostart.rs  batch.rs  cloud_sync.rs  compose.rs  health.rs  indexing.rs  kanban.rs  mod.rs  oauth.rs  pending_mail_ops.rs  sync_cmd.rs  translate.rs
src-tauri/src/commands/messages/: flags.rs  lifecycle.rs  mod.rs  provider_dispatch.rs
src/app/: AppBackground.tsx  Layout.tsx  useCloseToBackground.ts
src/components/: AccountSetup.tsx  ComposeFAB.tsx  ConfirmDialog.tsx  MessageDetail.tsx  MessageItem.tsx  Sidebar.tsx  StatusBar.tsx  ThreadItem.tsx  TitleBar.tsx
src/features/compose/: ComposeView.tsx
src/features/settings/: AboutTab.tsx  AccountsTab.tsx  AppearanceTab.tsx  CloudSyncTab.tsx  GeneralTab.tsx  PendingOpsTab.tsx  ProxyTab.tsx  ShortcutsTab.tsx  TranslateTab.tsx
src/hooks/: useKeyboard.ts
src/lib/: api.ts  backgroundImage.ts  ipc-types.ts  sanitizeHtml.ts  showMainWindow.ts  startupVisibility.ts
src/locales/: en.json  zh.json
src/stores/: shortcut.store.ts  ui.store.ts
src/styles/: index.css
tests/app/: AppBackground.test.tsx  Layout.navigation.test.tsx  useCloseToBackground.test.tsx
tests/components/: AccountSetup.oauth.test.tsx  ConfirmDialog.test.tsx  MessageDetail.selection.test.tsx  MessageItem.test.tsx  ShadowDomEmail.test.tsx  Sidebar.folder-order.test.tsx  StatusBar.realtime.test.tsx
tests/features/settings/: AboutTab.logs.test.tsx  AccountsTab.oauth-proxy.test.tsx  AppearanceTab.background.test.tsx  GeneralTab.autostart.test.tsx  GeneralTab.realtime.test.tsx
tests/hooks/: useAccountsQuery.test.ts
tests/i18n/: locales.test.ts
tests/lib/: sanitizeHtml.test.ts  showMainWindow.test.ts
tests/stores/: ui.store.background.test.ts  ui.store.test.ts
tests/styles/: background-image-css.test.ts  focus-visible-css.test.ts  search-controls-css.test.ts
tests/tauri/: background-asset-protocol-config.test.ts  linux-webkit-workaround.test.ts  macos-release-config.test.ts  windows-release-config.test.ts
