[package]
name = "pebble"
version = "0.0.9"
edition = "2021"

[lib]
name = "pebble_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { workspace = true }
opener = "0.7"
pebble-core = { path = "../crates/pebble-core" }
pebble-store = { path = "../crates/pebble-store" }
pebble-privacy = { path = "../crates/pebble-privacy" }
pebble-mail = { path = "../crates/pebble-mail" }
pebble-search = { path = "../crates/pebble-search" }
pebble-rules = { path = "../crates/pebble-rules" }
pebble-translate = { path = "../crates/pebble-translate" }
pebble-crypto = { path = "../crates/pebble-crypto" }
pebble-oauth = { path = "../crates/pebble-oauth" }
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
lettre = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"
windows-registry = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[build-dependencies]
tauri-build = { workspace = true }
