[package]
name = "pebble-mail"
version = "0.1.1"
edition = "2021"

[dependencies]
pebble-core = { path = "../pebble-core" }
pebble-store = { path = "../pebble-store" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-imap = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
mail-parser = { workspace = true }
native-tls = { workspace = true }
tokio-native-tls = { workspace = true }
async-trait = "0.1"
futures = "0.3"
utf7-imap = "0.3"
lettre = { workspace = true }
reqwest = { workspace = true }
tokio-socks = { workspace = true }
rand = "0.8"
